# FaceLock

./: .dockerignore  .env.example  .sesskey  CONTEXT.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
static/js/: app.js
