[project]
name = "faceid-privacy-demo"
version = "0.0.1"
description = "Phase 0 scaffold: privacy-first face re-identification demo using FastHTML + MonsterUI"
requires-python = ">=3.10"
dependencies = [
    "fasthtml>=0.4.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.2",
    "python-dotenv>=1.0.1",
    "fastlite>=0.0.5",
    "mistletoe>=1.4.0",
]

[project.scripts]
serve = "app.main:serve_app"

